# project-HuffPlus

./: CMakeLists.txt  README.md  exp.md
include/: Huffman.h  ICompressor.h
src/: Huffman.cpp  main.cpp
test/: decompressed.txt  input.txt  output.huffp
